--- a/src/client/static/404.html
+++ b/src/client/static/404.html
@@ -5,10 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Messanger - 404</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
+        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&display=swap"
+        rel="stylesheet">
+
     <link rel="stylesheet" type="text/css" href="/assets/styles/reset.css" />
+    <link rel="stylesheet" type="text/css" href="/assets/styles/variables.css" />
     <link rel="stylesheet" type="text/css" href="/assets/styles/layout.css" />
     <link rel="stylesheet" type="text/css" href="/assets/styles/common.css" />
+
+    <link rel="stylesheet" type="text/css" href="/assets/styles/error-page.css" />
 </head>
 
 <body>
