--- a/src/client/static/sign-up-step-one.html
+++ b/src/client/static/sign-up-step-one.html
@@ -100,7 +100,7 @@
                                 <span class="input-b__span">Phone</span>
 
                                 <div class="input-b__line">
-                                    <input id="phoneInput" type="text" class="input-b__input"
+                                    <input id="phoneInput" type="tel" class="input-b__input"
                                         placeholder="Type your phone" required>
 
                                     <div class="input-b__icon">
