Реализация страницы с чатом

--- a/src/client/static/settings.html
+++ b/src/client/static/settings.html
@@ -36,7 +36,7 @@
                         <h2 class="h2">Edit Information</h2>
                     </div>
 
-                    <button class="settings__close-icon btn-icon">
+                    <button class="settings__close-icon btn-icon" onclick="goBack()">
                         <img src="/assets/icons/close.svg" />
                     </button>
                 </div>
@@ -197,7 +197,7 @@
             <div class="settings" id="settingsBlock">
                 <div class="settings__header">
                     <h2 class="h2">Settings</h2>
-                    <button class="settings__close-icon btn-icon">
+                    <button class="settings__close-icon btn-icon" onclick="goBack()">
                         <img src="/assets/icons/close.svg" />
                     </button>
                 </div>
@@ -241,7 +241,7 @@
                         <h2 class="h2">Change password</h2>
                     </div>
 
-                    <button class="settings__close-icon btn-icon">
+                    <button class="settings__close-icon btn-icon" onclick="goBack()">
                         <img src="/assets/icons/close.svg" />
                     </button>
                 </div>
