Все страницы были переписаны с помощью шаблонизатора Nunjucks

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Messagner</title>
 
-    <script src="/app/index.js"></script>
+    <script src="/app/index.js" defer></script>
 </head>
 
 <body></body>
