--- a/src/client/static/500.html
+++ b/src/client/static/500.html
@@ -17,10 +17,13 @@
     <link rel="stylesheet" type="text/css" href="/assets/styles/common.css" />
 
     <link rel="stylesheet" type="text/css" href="/assets/styles/error-page.css" />
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/nunjucks/3.0.1/nunjucks.min.js" defer></script>
+    <script src="/app/500-errors.js" defer></script>
 </head>
 
 <body>
-    <main class="container container_center">
+    <main id="root" class="container container_center">
         <div class="error noselect">
             <p class="error__code">500</p>
             <p class="error__description">SORRY...</p>
