--- a/src/client/static/sign-up-step-one.html
+++ b/src/client/static/sign-up-step-one.html
@@ -14,130 +14,12 @@
     <link rel="stylesheet" type="text/css" href="/assets/styles/btn.css" />
     <link rel="stylesheet" type="text/css" href="/assets/styles/auth.css" />
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/nunjucks/3.0.1/nunjucks.min.js" defer></script>
     <script src="/app/services/localstorage.service.js" type="module" defer></script>
     <script src="/app/const/localstorage.keys.js" type="module" defer></script>
     <script src="/app/sign-up.js" type="module" defer></script>
 </head>
 
-<body>
-    <main class="auth-b">
-        <div class="auth-b__gradient">
-            <div class="auth-b__container container">
-                <div class="auth-b__form-container container container_center">
-                    <form id="signUpStepOneForm" class="auth-b__form" onsubmit="signUp(1)">
-                        <h1 class="auth-b__h1 h1">Sign Up</h1>
-
-                        <!-- TODO: Вынести в компонент -->
-                        <div class="input-b">
-                            <label class="input-b__label">
-                                <span class="input-b__span">First name</span>
-
-                                <div class="input-b__line">
-                                    <input name="firstName" type="text" class="input-b__input"
-                                        placeholder="Type your first name" required>
-
-                                    <div class="input-b__icon">
-                                        <svg width="23" height="22" viewBox="0 0 23 22" fill="none"
-                                            xmlns="http://www.w3.org/2000/svg">
-                                            <path
-                                                d="M11.3674 6.16699C12.3777 6.16699 13.2042 6.9558 13.2042 7.91991C13.2042 8.88402 12.3777 9.67284 11.3674 9.67284C10.3572 9.67284 9.53071 8.88402 9.53071 7.91991C9.53071 6.9558 10.3572 6.16699 11.3674 6.16699ZM11.3674 14.9316C13.847 14.9316 16.694 16.0622 16.8777 16.6845H5.85724C6.06847 16.0535 8.89704 14.9316 11.3674 14.9316ZM11.3674 4.41406C9.33785 4.41406 7.69398 5.98293 7.69398 7.91991C7.69398 9.85689 9.33785 11.4258 11.3674 11.4258C13.397 11.4258 15.0409 9.85689 15.0409 7.91991C15.0409 5.98293 13.397 4.41406 11.3674 4.41406ZM11.3674 13.1787C8.91541 13.1787 4.02051 14.3531 4.02051 16.6845V18.4375H18.7144V16.6845C18.7144 14.3531 13.8195 13.1787 11.3674 13.1787Z" />
-                                        </svg>
-
-                                    </div>
-
-                                    <div class="input-b__indicator"></div>
-                                </div>
-
-                            </label>
-                        </div>
-
-                        <div class="input-b input-b_default-pd_top">
-                            <label class="input-b__label">
-                                <span class="input-b__span">Second name</span>
-
-                                <div class="input-b__line">
-                                    <input name="secondName" type="text" class="input-b__input"
-                                        placeholder="Type your second name" required>
-
-                                    <div class="input-b__icon">
-                                        <svg width="23" height="22" viewBox="0 0 23 22" fill="none"
-                                            xmlns="http://www.w3.org/2000/svg">
-                                            <path
-                                                d="M11.3674 6.16699C12.3777 6.16699 13.2042 6.9558 13.2042 7.91991C13.2042 8.88402 12.3777 9.67284 11.3674 9.67284C10.3572 9.67284 9.53071 8.88402 9.53071 7.91991C9.53071 6.9558 10.3572 6.16699 11.3674 6.16699ZM11.3674 14.9316C13.847 14.9316 16.694 16.0622 16.8777 16.6845H5.85724C6.06847 16.0535 8.89704 14.9316 11.3674 14.9316ZM11.3674 4.41406C9.33785 4.41406 7.69398 5.98293 7.69398 7.91991C7.69398 9.85689 9.33785 11.4258 11.3674 11.4258C13.397 11.4258 15.0409 9.85689 15.0409 7.91991C15.0409 5.98293 13.397 4.41406 11.3674 4.41406ZM11.3674 13.1787C8.91541 13.1787 4.02051 14.3531 4.02051 16.6845V18.4375H18.7144V16.6845C18.7144 14.3531 13.8195 13.1787 11.3674 13.1787Z" />
-                                        </svg>
-                                    </div>
-
-                                    <div class="input-b__indicator"></div>
-                                </div>
-
-                            </label>
-                        </div>
-
-                        <div class="input-b input-b_default-pd_top">
-                            <label class="input-b__label">
-                                <span class="input-b__span">Email</span>
-
-                                <div class="input-b__line">
-                                    <input name="email" type="email" class="input-b__input"
-                                        placeholder="Type your email" required>
-
-                                    <div class="input-b__icon">
-                                        <svg width="23" height="22" viewBox="0 0 23 22" fill="none"
-                                            xmlns="http://www.w3.org/2000/svg">
-                                            <path
-                                                d="M11.3678 2.61719C6.29837 2.61719 2.18408 6.54374 2.18408 11.3818C2.18408 16.2199 6.29837 20.1464 11.3678 20.1464H15.9596V18.3935H11.3678C7.38204 18.3935 4.02082 15.1857 4.02082 11.3818C4.02082 7.57797 7.38204 4.37011 11.3678 4.37011C15.3535 4.37011 18.7147 7.57797 18.7147 11.3818V12.6352C18.7147 13.3276 18.0627 14.0112 17.3371 14.0112C16.6116 14.0112 15.9596 13.3276 15.9596 12.6352V11.3818C15.9596 8.96278 13.9024 6.9995 11.3678 6.9995C8.83306 6.9995 6.77592 8.96278 6.77592 11.3818C6.77592 13.8008 8.83306 15.7641 11.3678 15.7641C12.6351 15.7641 13.7922 15.2733 14.6188 14.4757C15.2157 15.2558 16.2443 15.7641 17.3371 15.7641C19.1463 15.7641 20.5514 14.3618 20.5514 12.6352V11.3818C20.5514 6.54374 16.4371 2.61719 11.3678 2.61719V2.61719ZM11.3678 14.0112C9.84327 14.0112 8.61265 12.8367 8.61265 11.3818C8.61265 9.92689 9.84327 8.75243 11.3678 8.75243C12.8922 8.75243 14.1229 9.92689 14.1229 11.3818C14.1229 12.8367 12.8922 14.0112 11.3678 14.0112Z" />
-                                        </svg>
-                                    </div>
-
-                                    <div class="input-b__indicator"></div>
-                                </div>
-
-                            </label>
-                        </div>
-
-                        <div class="input-b input-b_default-pd_top">
-                            <label class="input-b__label">
-                                <span class="input-b__span">Phone</span>
-
-                                <div class="input-b__line">
-                                    <input name="phone" type="tel" class="input-b__input"
-                                        placeholder="Type your phone" required>
-
-                                    <div class="input-b__icon">
-                                        <svg width="23" height="22" viewBox="0 0 23 22" fill="none"
-                                            xmlns="http://www.w3.org/2000/svg">
-                                            <g clip-path="url(#clip0)">
-                                                <path
-                                                    d="M15.9595 1.79392L6.77579 1.78516C5.76559 1.78516 4.94824 2.57397 4.94824 3.53808V19.3144C4.94824 20.2785 5.76559 21.0673 6.77579 21.0673H15.9595C16.9697 21.0673 17.7962 20.2785 17.7962 19.3144V3.53808C17.7962 2.57397 16.9697 1.79392 15.9595 1.79392ZM15.9595 17.5615H6.77579V5.29101H15.9595V17.5615Z" />
-                                            </g>
-                                            <defs>
-                                                <clipPath id="clip0">
-                                                    <rect width="22.0408" height="21.0351" fill="white"
-                                                        transform="translate(0.347168 0.908203)" />
-                                                </clipPath>
-                                            </defs>
-                                        </svg>
-                                    </div>
-
-                                    <div class="input-b__indicator"></div>
-                                </div>
-
-                            </label>
-                        </div>
-
-                        <div class="auth-b__btn auth-b__btn_mt_42">
-                            <button class="btn btn_size_normal" type="submit">Next step</button>
-                        </div>
-
-                        <div class="auth-b__sign-up-link">
-                            <span>Or </span>
-                            <a class="link" href="/static/login.html">Login</a>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </main>
-</body>
+<body></body>
 
 </html>
