--- a/src/client/static/login.html
+++ b/src/client/static/login.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" type="text/css" href="/assets/styles/settings.css" />
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/nunjucks/3.0.1/nunjucks.min.js" defer></script>
-    <script src="/app/login.js" defer></script>
+    <script src="/app/login.js" type="module" defer></script>
 </head>
 
 <body></body>
