Большая часть проекта была переписана на компоненты

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -6,9 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Messagner</title>
 
-    <script src="/app/index.js" defer></script>
+    <link rel="stylesheet" type="text/css" href="/assets/styles/reset.css" />
+    <link rel="stylesheet" type="text/css" href="/assets/styles/variables.css" />
+    <link rel="stylesheet" type="text/css" href="/assets/styles/layout.css" />
+    <link rel="stylesheet" type="text/css" href="/assets/styles/common.css" />
+    <link rel="stylesheet" type="text/css" href="/assets/styles/btn.css" />
+    <link rel="stylesheet" type="text/css" href="/assets/styles/input.css" />
+
+    <link rel="stylesheet" type="text/css" href="/assets/styles/modal.css" />
+    <link rel="stylesheet" type="text/css" href="/assets/styles/brief-information.css" />
+    <link rel="stylesheet" type="text/css" href="/assets/styles/avatar.css" />
+    <link rel="stylesheet" type="text/css" href="/assets/styles/settings.css" />
+
+    <script src="/app/services/templator.service.js" type="module" defer></script>
+    <script src="/app/index.js" type="module" defer></script>
 </head>
 
-<body></body>
+<body>
+    <div id="root"></div>
+</body>
 
 </html>
