--- a/src/client/static/settings.html
+++ b/src/client/static/settings.html
@@ -22,10 +22,12 @@
     <link rel="stylesheet" type="text/css" href="/assets/styles/avatar.css" />
     <link rel="stylesheet" type="text/css" href="/assets/styles/settings.css" />
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/nunjucks/3.0.1/nunjucks.min.js" defer></script>
+    <script src="/app/services/templator.service.js" type="module" defer></script>
     <script src="/app/settings.js" type="module" defer></script>
 </head>
 
-<body></body>
+<body>
+    <div id="root"></div>
+</body>
 
 </html>
