--- a/src/client/static/sign-up.html
+++ b/src/client/static/sign-up.html
@@ -14,12 +14,12 @@
     <link rel="stylesheet" type="text/css" href="/assets/styles/btn.css" />
     <link rel="stylesheet" type="text/css" href="/assets/styles/auth.css" />
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/nunjucks/3.0.1/nunjucks.min.js" defer></script>
-    <script src="/app/services/localstorage.service.js" type="module" defer></script>
-    <script src="/app/const/localstorage.keys.js" type="module" defer></script>
+    <script src="/app/services/templator.service.js" type="module" defer></script>
     <script src="/app/sign-up.js" type="module" defer></script>
 </head>
 
-<body></body>
+<body>
+    <div id="root"></div>
+</body>
 
 </html>
