Рефакторинг. Структурирование проекта. Перевод части страниц на компонентный подход

--- a/src/client/static/messanger.html
+++ b/src/client/static/messanger.html
@@ -28,11 +28,12 @@
     <link rel="stylesheet" type="text/css" href="/assets/styles/messanger/chat-list.css" />
     <link rel="stylesheet" type="text/css" href="/assets/styles/messanger/message-list.css" />
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/nunjucks/3.0.1/nunjucks.min.js" defer></script>
-    <script src="/app/messanger.js" defer></script>
+    <script src="/app/services/templator.service.js" type="module" defer></script>
+    <script src="/app/messanger.js" type="module"></script>
 </head>
 
 <body>
+    <div id="root"></div>
 </body>
 
 </html>
