--- a/src/client/static/404.html
+++ b/src/client/static/404.html
@@ -17,15 +17,13 @@
     <link rel="stylesheet" type="text/css" href="/assets/styles/common.css" />
 
     <link rel="stylesheet" type="text/css" href="/assets/styles/error-page.css" />
+
+    <script src="/app/services/templator.service.js" type="module" defer></script>
+    <script src="/app/error-404.js" type="module" defer></script>
 </head>
 
 <body>
-    <main class="container container_center">
-        <div class="error noselect">
-            <p class="error__code">404</p>
-            <p class="error__description">NOT FOUND</p>
-        </div>
-    </main>
+    <div id="root"></div>
 </body>
 
 </html>
