--- a/src/client/index.html
+++ b/src/client/index.html
@@ -10,13 +10,21 @@
     <link rel="stylesheet" type="text/css" href="/assets/styles/variables.css" />
     <link rel="stylesheet" type="text/css" href="/assets/styles/layout.css" />
     <link rel="stylesheet" type="text/css" href="/assets/styles/common.css" />
-    <link rel="stylesheet" type="text/css" href="/assets/styles/btn.css" />
     <link rel="stylesheet" type="text/css" href="/assets/styles/input.css" />
+    <link rel="stylesheet" type="text/css" href="/assets/styles/btn.css" />
+
+    <link rel="stylesheet" type="text/css" href="/assets/styles/auth.css" />
 
     <link rel="stylesheet" type="text/css" href="/assets/styles/modal.css" />
     <link rel="stylesheet" type="text/css" href="/assets/styles/brief-information.css" />
     <link rel="stylesheet" type="text/css" href="/assets/styles/avatar.css" />
     <link rel="stylesheet" type="text/css" href="/assets/styles/settings.css" />
+    <link rel="stylesheet" type="text/css" href="/assets/styles/search.css" />
+    <link rel="stylesheet" type="text/css" href="/assets/styles/badge.css" />
+
+    <link rel="stylesheet" type="text/css" href="/assets/styles/messanger/messanger.css" />
+    <link rel="stylesheet" type="text/css" href="/assets/styles/messanger/chat-list.css" />
+    <link rel="stylesheet" type="text/css" href="/assets/styles/messanger/message-list.css" />
 
     <script src="/app/services/templator.service.js" type="module" defer></script>
     <script src="/app/index.js" type="module" defer></script>
