--- a/src/client/index.html
+++ b/src/client/index.html
@@ -21,6 +21,10 @@
     <link rel="stylesheet" type="text/css" href="/assets/styles/settings.css" />
     <link rel="stylesheet" type="text/css" href="/assets/styles/search.css" />
     <link rel="stylesheet" type="text/css" href="/assets/styles/badge.css" />
+    <link rel="stylesheet" type="text/css" href="/assets/styles/create-chat.css" />
+    <link rel="stylesheet" type="text/css" href="/assets/styles/selected-user.css" />
+    <link rel="stylesheet" type="text/css" href="/assets/styles/edit-chat-users.css" />
+    <link rel="stylesheet" type="text/css" href="/assets/styles/menu.css" />
 
     <link rel="stylesheet" type="text/css" href="/assets/styles/messanger/messanger.css" />
     <link rel="stylesheet" type="text/css" href="/assets/styles/messanger/chat-list.css" />
