--- a/src/client/index.html
+++ b/src/client/index.html
@@ -30,7 +30,7 @@
     <link rel="stylesheet" type="text/css" href="/assets/styles/messanger/chat-list.css" />
     <link rel="stylesheet" type="text/css" href="/assets/styles/messanger/message-list.css" />
 
-    <script src="/app/services/templator.service.js" type="module" defer></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/nunjucks/3.0.1/nunjucks.min.js" defer></script>
     <script src="/app/index.js" type="module" defer></script>
 </head>
 
