--- a/src/client/index.html
+++ b/src/client/index.html
@@ -6,29 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Messagner</title>
 
-    <link rel="stylesheet" type="text/css" href="/assets/styles/reset.css" />
-    <link rel="stylesheet" type="text/css" href="/assets/styles/variables.css" />
-    <link rel="stylesheet" type="text/css" href="/assets/styles/layout.css" />
-    <link rel="stylesheet" type="text/css" href="/assets/styles/common.css" />
-    <link rel="stylesheet" type="text/css" href="/assets/styles/input.css" />
-    <link rel="stylesheet" type="text/css" href="/assets/styles/btn.css" />
-
-    <link rel="stylesheet" type="text/css" href="/assets/styles/auth.css" />
-
-    <link rel="stylesheet" type="text/css" href="/assets/styles/modal.css" />
-    <link rel="stylesheet" type="text/css" href="/assets/styles/brief-information.css" />
-    <link rel="stylesheet" type="text/css" href="/assets/styles/avatar.css" />
-    <link rel="stylesheet" type="text/css" href="/assets/styles/settings.css" />
-    <link rel="stylesheet" type="text/css" href="/assets/styles/search.css" />
-    <link rel="stylesheet" type="text/css" href="/assets/styles/badge.css" />
-    <link rel="stylesheet" type="text/css" href="/assets/styles/create-chat.css" />
-    <link rel="stylesheet" type="text/css" href="/assets/styles/selected-user.css" />
-    <link rel="stylesheet" type="text/css" href="/assets/styles/edit-chat-users.css" />
-    <link rel="stylesheet" type="text/css" href="/assets/styles/menu.css" />
-
-    <link rel="stylesheet" type="text/css" href="/assets/styles/messanger/messanger.css" />
-    <link rel="stylesheet" type="text/css" href="/assets/styles/messanger/chat-list.css" />
-    <link rel="stylesheet" type="text/css" href="/assets/styles/messanger/message-list.css" />
+    <link rel="stylesheet" type="text/css" href="/assets/styles/styles.css" />
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/nunjucks/3.0.1/nunjucks.min.js" defer></script>
     <script src="/app/index.js" type="module" defer></script>
