Изменения в структуре проекта

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Messagner</title>
+    <title>Messanger</title>
 
-    <link rel="stylesheet" type="text/css" href="/assets/styles/styles.css" />
+    <link rel="stylesheet" type="text/css" href="static/styles.css" />
 
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/nunjucks/3.0.1/nunjucks.min.js"
