В проект был добавлен Webpack. Также были добавлены лоудеры и плагины для загрузки TS и SCSS файлов

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Messanger</title>
 
-    <link rel="stylesheet" type="text/css" href="static/styles.css" />
+    <!-- <link rel="stylesheet" type="text/css" href="static/styles.css" /> -->
+    <link rel='stylesheet' href='main.css'>
 
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/nunjucks/3.0.1/nunjucks.min.js"
       defer
     ></script>
-    <script src="/app/index.js" type="module" defer></script>
+    <script src="./index.bundle.js" defer></script>
   </head>
 
   <body>
